# FhY

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  build_grammar.sh  build_grammer.sh  datastructure.py  main.py  pyproject.toml  requirements.txt  requirements_build.txt  tox.ini  visualization.py
.github/workflows/: python-package.yml
FhY/lang/: visitor.py
FhY/lang/ast/: base.py  component.py  expression.py  statement.py  type.py
docs/: conf.py  index.rst  requirements.txt
docs/source/: conf.py  contributors.rst  index.rst  install.rst
docs/source/_ext/: fhy_code_selector.py  fhy_pygments_lexer.py
docs/source/_static/css/: code_selector.css  custom.css  theme.css
docs/source/_templates/: index.html
docs/source/design_blog/: index.rst  post_2024-04-04.rst  post_2024-04-05.rst  post_2024-04-10.rst  post_2024-04-22.rst  post_2024-04-25.rst  post_2024-05-02.rst  post_2024-05-23.rst  post_20240405.rst  post_20240410.rst
docs/source/user_guide/: index.rst  install.rst  overview.rst
fhy/: __init__.py  cli.py  error.py
fhy/driver/: __init__.py  compilation_options.py  file_reader.py  main.py  utils.py  workspace.py
fhy/driver/ast_program_builder/: __init__.py  builder.py  module_tree.py  source_file_ast.py
fhy/error/: __init__.py
fhy/ir/: __init__.py  expression.py  identifier.py  module.py  program.py  type.py
fhy/ir/expression/: __init__.py  base.py
fhy/ir/table/: __init__.py  base.py  frames.py  symbol_table.py
fhy/lang/: __init__.py  pprint.py  span.py  visitor.py
fhy/lang/ast/: __init__.py  alias.py  base.py  component.py  core.py  directory.py  expression.py  identifier.py  pprint.py  qualified_type.py  span.py  statement.py  type.py  visitor.py
fhy/lang/ast/node/: __init__.py  base.py  core.py  expression.py  statement.py
fhy/lang/ast/passes/: identifier_collector.py  identifier_replacer.py  imported_identifier_collector.py  symbol_table_builder.py
fhy/lang/ast/serialization/: __init__.py  to_json.py
fhy/lang/ast_builder/: __init__.py  builder.py  builder_frame.py  core.py
fhy/lang/ast_builder/converter/: __init__.py  from_fhy_source.py  from_parse_tree.py
fhy/lang/converter/: from_fhy_source.py  from_parse_tree.py
fhy/lang/parser/: __init__.py
fhy/lang/passes/: __init__.py  identifier_collector.py  identifier_replacer.py  imported_identifier_collector.py  symbol_table_builder.py
fhy/lang/printer/: __init__.py  printer.py  to_json.py
fhy/lang/serialization/: to_json.py
fhy/utils/: __init__.py  alias.py  discovery.py  error.py  logger.py  stack.py
grammar/: FhY.g4
src/fhy/: __init__.py  cli.py  error.py  logger.py
src/fhy/driver/: __init__.py  compilation_options.py  file_reader.py  main.py  utils.py  workspace.py
src/fhy/driver/ast_program_builder/: __init__.py  builder.py  module_tree.py  source_file_ast.py
src/fhy/fdfg/: __init__.py  core.py  edge.py  op.py  visualize.py
src/fhy/fdfg/builtins/: __init__.py  namespace.py  reductions.py
src/fhy/fdfg/converter/: from_fhy_ast.py
src/fhy/fdfg/node/: __init__.py  base.py  fractalized.py  io.py  parametric.py  primitive.py
src/fhy/fdfg/ops/: __init__.py  bitwise.py  identity.py  logical.py  math.py
src/fhy/ir/: __init__.py  identifier.py  program.py  type.py
src/fhy/ir/builtins/: __init__.py  functions.py  namespace.py  reductions.py
src/fhy/ir/expression/: __init__.py  base.py
src/fhy/ir/table/: __init__.py  base.py  symbol_table.py
src/fhy/lang/: __init__.py
src/fhy/lang/ast/: __init__.py  alias.py  pprint.py  span.py  visitor.py
src/fhy/lang/ast/node/: __init__.py  base.py  core.py  expression.py  qualified_type.py  statement.py
src/fhy/lang/ast/passes/: __init__.py  ast_to_core_expression_converter.py  expression_decomposer.py  identifier_collector.py  identifier_replacer.py  imported_identifier_collector.py  index_collector.py  numerical_expression_type_inferer.py  symbol_table_builder.py  type_checker.py
src/fhy/lang/ast/serialization/: __init__.py  to_json.py
src/fhy/lang/converter/: __init__.py  from_fhy_source.py  from_parse_tree.py  from_pytorch_to_fhy.py  pytorch_to_fhy.py
src/fhy/lang/parser/: FhYLexer.py  FhYListener.py  FhYParser.py  FhYVisitor.py  __init__.py
src/fhy/passes/: __init__.py  core.py
src/fhy/utils/: __init__.py  enumeration.py  lattice.py  optional_deps.py  poset.py  stack.py
tests/: test_ast.py  test_ast_registration.py  test_builder.py  test_builder_frame.py  test_parse_tree_to_ast.py  utils.py
tests/integration/: test_cli_args.py  test_sample_files.py  test_syntax.py  utils.py
tests/integration/Samples/Input/: matmul.fhy
tests/integration/Samples/Output/: matmul_output.fhy  sigmoid_activation_output.fhy  weird_output.fhy
tests/integration/data/input/: sigmoid_activation.fhy  weird.fhy
tests/integration/data/output/: matmul_output.fhy  weird_output.fhy
tests/unit/: __init__.py  conftest.py  test_ast_json.py  test_ast_nodes.py  test_ast_pprint.py  test_ast_printer.py  test_ast_registration.py  test_ast_to_fdfg.py  test_builder_frame.py  test_discovery.py  test_fdfg.py  test_identifier_collector.py  test_io.py  test_lattice.py  test_logger.py  test_optional_deps.py  test_parse_tree_to_ast.py  test_poset.py  test_program_builder.py  test_stack.py  test_symbol_table_builder.py  test_type.py  test_utils_logger.py  test_visitor.py
tests/unit/data/circular_import/: a.fhy  b.fhy
tests/unit/data/unidirectional_import/: a.fhy  b.fhy
