[build-system]
requires = ["setuptools>=67.6.1"]
build-backend = "setuptools.build_meta"

[project]
name = "fhy"
description = "Cross Domain Compiler for Accelerators"
license = {file = "LICENSE"}
authors = [
   {name = "Christopher Priebe", email = "cpriebe@ucsd.edu"},
   {name = "Jason C Del Rio", email = "j3delrio@ucsd.edu"},
]
maintainers = [
   {name = "Christopher Priebe", email = "cpriebe@ucsd.edu"},
   {name = "Jason C Del Rio", email = "j3delrio@ucsd.edu"},
]
requires-python = ">=3.8"
keywords = ["Compiler", "Cross-Compiler", "ML", "Accelerator"]
classifiers = [
    "Development Status :: 1 - Planning",
   "Programming Language :: Python :: 3",
]
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
exclude = ["grammar", "docs", "tests"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-xdist", "tox", "ruff", "mypy", "sphinx>=5.0.2", "wheel", "setuptools>=67.6.1"]
test = ["pytest", "pytest-cov", "pytest-xdist"]
lint = ["ruff"]
type = ["mypy"]
docs = ["sphinx>=5.0.2"]
build = ["wheel", "setuptools>=67.6.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto -rA --cov=fhy --cov-report term-missing --cov-fail-under=90"

[tool.coverage.report]
omit = [
   "fhy/lang/parser/*.py"
]

[tool.mypy]
pretty = false

[[tool.mypy.overrides]]
module = ["fhy.lang.parser.*"]
ignore_errors = true

[tool.ruff]
extend-exclude = ["grammar/*", "docs/*", "fhy/lang/parser/*.py"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "D300"]
ignore = [
   "F401",  # Unused Imports
   ]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
